--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -77,6 +77,9 @@
     }
 
 
+    #contact {
+        margin-right: 50px;
+    }
 
     /*
 .homebtn,
@@ -130,6 +133,16 @@ margin: 0px 0px 0px 50px;
     }
 
 
+    #tabResumeTxt1,
+    #tabResumeTxt2,
+    #tabResumeTxt3 {
+        padding: 30px;
+        width: 280px;
+        height: 85%;
+        margin: 0 0 0 -35px;
+    }
+
+
 
     #nhbrcDepth,
     #homeProjectDepth,
@@ -137,13 +150,14 @@ margin: 0px 0px 0px 50px;
     #showcaseHomeDepth,
     #productDepth,
     #producyDisplayDepth {
-        margin: -880px 0 0 -80px;
+        margin: -880px 0 0 -100px;
         width: 500px;
     }
 
 
     .mobileProjects {
         height: 640px;
+        margin: 0 30px 0 -30px;
     }
 
     .projectinfobox1 {
@@ -161,19 +175,22 @@ margin: 0px 0px 0px 50px;
     }
 
     #about p {
-        width: 300px;
+        width: 290px;
     }
-
 
 
     .containResume {
         margin-left: -5px;
+        padding-right: 10px;
     }
 
 
 
     .textBtn {
         margin: 40px 0 20px 0;
+        width: 80px;
+        height: 80px;
+        padding: 30px 20px 10px 20px;
     }
 
 
